Fix but to ensure order review visibility in single-step layout.

--- a/css/checkout-steps-rtl-420-alpha-6.css
+++ b/css/checkout-steps-rtl-420-alpha-6.css
@@ -1886,6 +1886,7 @@ body.has-checkout-column-layout--two_columns:not(.has-checkout-layout--multi-ste
   display: block;
 }
 
+body.has-checkout-layout--single-step .fc-wrapper .fc-checkout-order-review,
 body.fc-checkout-step-current-last .fc-wrapper .fc-checkout-order-review {
   display: block !important;
 }
